Cleaning comments and fixing "problems" according to lint.